--- a/projects/final/src/client/index.html
+++ b/projects/final/src/client/index.html
@@ -1,3 +1,1 @@
-<html><body></body>
-<script src="client.js"></script>
-</html>
+<html><head><link href="styles.scss" rel="stylesheet" type="text/css"></head><body></body><script src='client.js'></script></html>
