--- a/projects/final/src/client/html/index.html
+++ b/projects/final/src/client/html/index.html
@@ -1,1 +1,1 @@
-<html><head><link href="styles.scss" rel="stylesheet" type="text/css"></head><body></body><script src='client.js'></script></html>
+<html><head><link href="../styles folder/styles.scss" rel="stylesheet" type="text/css"></head><body></body><script src='../client.js'></script></html>
